# NLP-sentiment-Ent

./: Backend_app.py  README.md  Streamlit_frontend.py  dvc.yaml  main.py  pyproject.toml  requirements.txt
notebook/: Experiment bow vs tfidf.ipynb  HAndle imbalance data.ipynb  Max_feature with tf-idf.ipynb  Preprocessing_&_EDA_sentement.ipynb  XGboost_ml algo_rithm.ipynb  basemodel.ipynb
src/model/: model_building.py  model_evaluation.py  register_model.py
